# FSD_Vehicle

./: .dockerignore  .env  .gitignore  Makefile  README.md  build_apriltag.sh  build_common.sh  build_first.sh  build_pc.bat  build_pc.sh  build_station.sh  docker-compose.jetson.yml  docker-compose.rpi.yml  docker-compose.yml  run_pc.bat  run_pc.sh  save_2d_cartographer_map.sh  save_2d_cartographer_map_gazebo.sh  save_2d_gmapping_map.sh  save_2d_gmapping_map_gazebo.sh  setup_local_env.sh
src/ugv_main/pcd_to_scan_pkg/: package.xml  setup.cfg  setup.py
src/ugv_main/pcd_to_scan_pkg/pcd_to_scan_pkg/: pointcloud_to_laserscan_node.py
src/ugv_main/plane_fit_pkg/: package.xml  setup.cfg  setup.py
src/ugv_main/plane_fit_pkg/launch/: plane_fit.launch.py
src/ugv_main/plane_fit_pkg/plane_fit_pkg/: plane_fit_node.py
src/ugv_main/ugv_gazebo/: CMakeLists.txt  package.xml
src/ugv_main/ugv_gazebo/launch/: display.launch.py
src/ugv_main/ugv_gazebo/scripts/: bird_manager.py
src/ugv_main/ugv_gazebo/urdf/: mid360.xacro  rasp_rover.urdf  ugv_rover.urdf
src/ugv_main/ugv_gazebo/worlds/: plane_fit_world.world  ugv_world.world
src/ugv_main/ugv_lidar_detection/: package.xml  setup.cfg  setup.py
src/ugv_main/ugv_lidar_detection/launch/: gimbal_track_lidar.launch.py  lidar_detection.launch.py  station_detect.launch.py
src/ugv_main/ugv_lidar_detection/ugv_lidar_detection/: cluster_select_node.py  lidar_detector_node.py  lidar_motion_tracker_node.py
src/waver_patrol/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/waver_patrol/config/: collision_monitor_waver.yaml  keepout_speed_zones.yaml  moving_object_map_transform.yaml  nav2_params_waver.yaml  velocity_smoother_waver.yaml  waver_bird_autonomy.yaml  waver_default.yaml  waver_keyboard.yaml  waver_localization.yaml  waver_mapping.yaml  waver_nav2.yaml  waver_nav2_radar_bird_mission.yaml  waver_patrol.yaml  waver_safety.yaml
src/waver_patrol/data/: README.md
src/waver_patrol/data/schema/: camera_classification_schema.csv  experiment_summary_schema.csv  lidar_targets_schema.csv  mission_events_schema.csv  radar_targets_schema.csv
src/waver_patrol/docs/: emergency_stop.md  failure_modes.md  mapping_localization_nav2.md  moving_object_map_transform.md  outdoor_risk_matrix.md  outdoor_test_checklist.md  package_integration.md  patrol_operation.md  sensor_requirements.md  waver_bird_autonomy.md  waver_experiment_metrics.md
src/waver_patrol/launch/: include_existing_ugv_nav.launch.py  include_existing_ugv_slam.launch.py  moving_object_map_transform.launch.py  waver_bird_autonomy.launch.py  waver_bringup.launch.py  waver_gazebo_bird_autonomy.launch.py  waver_gazebo_nav2_radar_bird_mission.launch.py  waver_localization.launch.py  waver_mapping_2d.launch.py  waver_mapping_3d.launch.py  waver_nav2.launch.py  waver_nav2_radar_bird_mission.launch.py  waver_patrol.launch.py  waver_slam_nav_patrol.launch.py  waver_teleop.launch.py
src/waver_patrol/maps/: README.md
src/waver_patrol/scripts/: export_rosbag_to_csv.py  inspect_waveshare_stack.sh  install_udev.sh  record_waver_experiment_bag.sh  run_localization.sh  run_mapping.sh  run_nav2.sh  run_patrol.sh  run_teleop.sh  stop_waver.sh  summarize_experiment.py  waver_real_preflight_check.sh
src/waver_patrol/test/: test_acceleration_limiter.py  test_avoidance_path_generator.py  test_cmd_vel_to_json.py  test_collision_guard.py  test_command_mux.py  test_command_sanitizer.py  test_copyright.py  test_flake8.py  test_localization_guard.py  test_patrol_route.py  test_patrol_state_machine.py  test_pep257.py  test_runaway_guard.py  test_safety_supervisor.py  test_serial_json_fake.py  test_speed_limiter.py  test_ttc_guard.py  test_waver_bird_autonomy_core.py  test_waver_nav2_radar_mission_core.py  test_waypoint_store.py
src/waver_patrol/waver_patrol/: autonomy_common.py  config.py  log.py  utils.py
src/waver_patrol/waver_patrol/apps/: __init__.py  inspect_stack.py  localization.py  mapping_2d.py  mapping_3d.py  nav2_demo.py  patrol_run.py  risk_self_test.py  save_map.py  sensor_check.py  slam_nav_patrol.py  stop_robot.py  teleop_keyboard.py
src/waver_patrol/waver_patrol/bridges/: __init__.py  cmd_vel_to_json.py  deep_learning_bridge_stub.py  gazebo_bird_pose_bridge_node.py  launch_manager.py  lifecycle_tools.py  map_server_client.py  nav2_client.py  package_inspector.py  ros2_detector.py  serial_cmd_vel_bridge.py  sound_alert_stub.py  tf_monitor.py  topic_monitor.py  waypoint_follower_client.py
src/waver_patrol/waver_patrol/comms/: __init__.py  http_json_client.py  port_conflict_detector.py  port_detect.py  process_lock.py  serial_json_client.py  wave_rover_adapter.py
src/waver_patrol/waver_patrol/control/: __init__.py  auto_behavior_mux_node.py  target_body_tracker_node.py
src/waver_patrol/waver_patrol/localization/: __init__.py  covariance_monitor.py  gps_interface.py  localization_manager.py  pose_source.py  relocalization.py
src/waver_patrol/waver_patrol/logging/: __init__.py  experiment_data_logger_node.py
src/waver_patrol/waver_patrol/mapping/: __init__.py  dynamic_filter.py  map_io.py  map_quality.py  slam_manager.py
src/waver_patrol/waver_patrol/mission/: __init__.py  mission_patrol_manager_node.py  mission_utils.py  radar_command_bridge_node.py  target_goal_manager_node.py
src/waver_patrol/waver_patrol/patrol/: __init__.py  battery_return_manager_node.py  fixed_waypoint_patrol_node.py  patrol_events.py  patrol_logger.py  patrol_manager.py  patrol_route.py  patrol_state_machine.py  return_home.py  return_home_controller_node.py  waypoint_store.py  waypoint_tasks.py
src/waver_patrol/waver_patrol/perception/: __init__.py  camera_health.py  dynamic_obstacle_tracker.py  lidar_aerial_motion_detector_node.py  lidar_anomaly_filter.py  lidar_scan.py  lidar_sectorizer.py  livox_pointcloud_to_scan_node.py  moving_object_goal_relay_node.py  moving_object_map_transform_node.py  object_detector.py  sensor_fusion.py  (+2 more)
src/waver_patrol/waypoints/: patrol_empty.yaml  patrol_example.yaml  patrol_outdoor_demo.yaml  waver_bird_patrol_demo.yaml  waver_nav2_patrol_mission.yaml
(+103 files in other folders)
