<?xml version="1.0"?>
<package format="3">
  <name>pcd_to_scan_pkg</name>
  <version>0.0.1</version>
  <description>Convert PointCloud2 from Livox MID-360 to LaserScan for 2D SLAM</description>

  <maintainer email="seo@example.com">seo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>