<?xml version="1.0"?>
<package format="3">
  <name>ugv_gazebo</name>
  <version>1.0.0</version>
  <description>UGV Gazebo package</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
