<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_lidar_detection</name>
  <version>0.0.1</version>
  <description>4D LiDAR Object Detection package</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- gimbal_track_lidar.launch.py runs ugv_vision's gimbal_controller_node -->
  <exec_depend>ugv_vision</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
